crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@204.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_delete('base hidden rebel spaceship strike'::tsvector, 'spaceship');"
---
SelectStmt@0..78
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..76
    FuncCall@7..76
      Ident@7..16 "ts_delete"
      Ascii40@16..17 "("
      TypeCast@17..63
        AConst@17..53
          Sconst@17..53 "'base hidden rebel sp ..."
        Typecast@53..55 "::"
        TypeName@55..63
          Ident@55..63 "tsvector"
      Ascii44@63..64 ","
      Whitespace@64..65 " "
      AConst@65..76
        Sconst@65..76 "'spaceship'"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

