crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@205.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_delete('base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3'::tsvector, ARRAY['spaceship','rebel']);"
---
SelectStmt@0..119
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..116
    FuncCall@7..116
      Ident@7..16 "ts_delete"
      Ascii40@16..17 "("
      TypeCast@17..89
        AConst@17..79
          Sconst@17..79 "'base:7 hidden:6 rebe ..."
        Typecast@79..81 "::"
        TypeName@81..89
          Ident@81..89 "tsvector"
      Ascii44@89..90 ","
      Whitespace@90..91 " "
      AArrayExpr@91..116
        Array@91..96 "ARRAY"
        Ascii91@96..97 "["
        AConst@97..108
          Sconst@97..108 "'spaceship'"
        Ascii44@108..109 ","
        AConst@109..116
          Sconst@109..116 "'rebel'"
  Ascii93@116..117 "]"
  Ascii41@117..118 ")"
  Ascii59@118..119 ";"

