crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@207.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_delete('base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3'::tsvector, ARRAY['spaceshi','rebel']);"
---
SelectStmt@0..118
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..115
    FuncCall@7..115
      Ident@7..16 "ts_delete"
      Ascii40@16..17 "("
      TypeCast@17..89
        AConst@17..79
          Sconst@17..79 "'base:7 hidden:6 rebe ..."
        Typecast@79..81 "::"
        TypeName@81..89
          Ident@81..89 "tsvector"
      Ascii44@89..90 ","
      Whitespace@90..91 " "
      AArrayExpr@91..115
        Array@91..96 "ARRAY"
        Ascii91@96..97 "["
        AConst@97..107
          Sconst@97..107 "'spaceshi'"
        Ascii44@107..108 ","
        AConst@108..115
          Sconst@108..115 "'rebel'"
  Ascii93@115..116 "]"
  Ascii41@116..117 ")"
  Ascii59@117..118 ";"

